crates/sql-orm/tests/ui/changeset_field_not_option.stderr
error: Changeset requiere Option<T> en cada campo para distinguir campos omitidos
  --> tests/ui/changeset_field_not_option.rs:12:12
   |
12 |     email: String,
   |            ^^^^^^
